<resources>
    <string name="app_name">Rize</string>
    <string name="get_start">Get start</string>
    <string name="more_card_content">More card content</string>
    <string name="card_description">Card Description</string>
    <string name="card_title">Card Title</string>
    <string name="card_title_main">Card Title</string>
    <string name="card_description_main">Card Description</string>
    <string name="more_card_content_main">More card content</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="compose_shortcut_short_label1">View Home</string>
    <string name="compose_shortcut_long_label1">View Home </string>
    <string name="compose_disabled_message1">"this is disable "</string>
    <string name="welcome_to_our_app">Welcome to our app!</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="already_registered">Already Registered</string>
    <string name="login">Login</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="log_in">Log in</string>
    <string name="new_here_sign_up_now">New here? Sign up now!</string>
    <string name="register">Register</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="tasks">Tasks</string>
    <string name="compose_shortcut_short_label4">View Profile</string>
    <string name="compose_shortcut_long_label4">View Profile</string>
    <string name="compose_disabled_message4">this is disabled</string>
    <string name="compose_disabled_message3">this is disabled</string>
    <string name="compose_shortcut_long_label3">View Notes</string>
    <string name="compose_shortcut_short_label3">View Notes</string>
    <string name="compose_disabled_message2">this is disable</string>
    <string name="compose_shortcut_long_label2">View Tasks</string>
    <string name="compose_shortcut_short_label2">View Tasks</string>

</resources>